--- a/css/mid1.css
+++ b/css/mid1.css
@@ -1,4 +1,13 @@
 /*NOTICIA*/
+
+
+div#noticia{
+    width: 400px;
+    height: 350px;
+    float: right;
+    background-color: #393E46;
+    
+    }
 div#noticia div.titulo{
 
     width: 250px;
@@ -83,51 +92,101 @@ div.botonMas a:hover{
 
 
  /*GALERIA*/
- div#galeria{
+
+div#mid1{
+
+
+width: 1170px;
+height: 350px;
+
+}
+
+
+ div.contenedorGaleria{
+    width: 770px;
+    height: 350px;
+    background-color: #03001C;
+    float: left;
 
     
+    }
+ div#galeria{
+
+    width: 400px;
+    height: 200px;
+    perspective: 700px;
+                perspective-origin: 50% 50%;
+
+    margin-left: 165px;
+    margin-top: 65px;
 }
+
+
 
 
 
 div#mid1 div#galeria div.galimagenes{
 
-  
+    width: 400px;
+    height: 200px;
+    transform-style: preserve-3d;
+    transition: all 4s linear 0s;
+    animation-name: animaciongaleria;
+    animation-duration: 9s;
+    animation-iteration-count: infinite;
+
+
+
 }
 
 div.galimagenes div{
 
-   
+    width: 400px;
+    height: 200px;
+    position: absolute;
 }
 
 
 div.galimagenes div:nth-child(1){
 
+    transform: rotateY(180deg) translateZ(200px);
 }
 
 div.galimagenes div:nth-child(2){
-    
-    }
+    transform: rotateY(-90deg) translateZ(200px);
+}
     
     div.galimagenes div:nth-child(3){
-        
+        transform:  translateZ(200px);
+
         }
 
         div.galimagenes div:nth-child(4){
-            
+            transform: rotateY(90deg) translateZ(200px);
             }
-            div.galimagenes div:nth-child(5){
-            
-            }
-            div.galimagenes div:nth-child(6){
-            
-            }
-
+          
 
 
             @keyframes animaciongaleria{
 
-
-               
+                0%{
+                    transform: rotateY(0deg) rotateX(0deg);
+                }
+               20%{
+                    transform: rotateY(90deg) rotateX(0deg);
+                }
+               40%{
+                    transform: rotateY(180deg) rotateX(0deg);
+                }
+               60%{
+                    transform: rotateY(270deg) rotateX(0deg);
+                }
+               80%{
+                    transform: rotateY(360deg) rotateX(0deg);
+                }
+              
+                100%{
+                    transform: rotateY(360deg) rotatex(0deg );
+                }        
 
             }
