--- a/css/mid2.css
+++ b/css/mid2.css
@@ -4,11 +4,22 @@
 div#mid2 div div.imagen{
 
 width: 230px;
-border: 1px solid yellow;
 height: 170px;
 margin-left: 20px;
 margin-top: 10px;
 }   
+
+div.imagen img{
+    width: 230px;
+    height: 170px;
+}
+
+div#mid2 div.noticia1{
+    background-color: gray;
+    width: 292.5px;
+    float: left;
+    height: 216px;
+}
 
 div#mid2 div div.imagen div.botones{
 
@@ -17,6 +28,7 @@ div#mid2 div div.imagen div.botones{
     float: right;
     margin-top: 128px;
     position: relative;
+    top: -172px;
     }   
     
 div#mid2{
@@ -80,16 +92,31 @@ div#mid2 div div.textodebajo{
 
 width: 230px;
 height: 30px;
-border: 1px solid blue;
 margin-left: 20px;
 margin-top: 5px;
+position: relative;
 
 
 
-
-}div#mid2 div div.textodebajo p{
+}div#mid2 div div.textodebajo p:nth-child(1){
 
 
     margin-left: 0px;
-    font-family: 'Oswald', sans-serif;
+    font-family: sans-serif;
+    position: absolute;
+    left:0px;
+
+}
+
+
+
+div#mid2 div div.textodebajo p:nth-child(2){
+
+
+    margin-left: 0px;
+    font-family: sans-serif;
+    position: absolute;
+    left:0px;
+    top: 15px;
+
 }
