--- a/css/mid2.css
+++ b/css/mid2.css
@@ -15,7 +15,7 @@ div.imagen img{
 }
 
 div#mid2 div.noticia1{
-    background-color: gray;
+    background-color: #CCCCCC;
     width: 292.5px;
     float: left;
     height: 216px;
