--- a/css/pie.css
+++ b/css/pie.css
@@ -246,7 +246,7 @@ div#pie div.parteabajo div.contenedorPie ul#menufooter li{
 
 div#pie div.parteabajo div.contenedorPie ul#menufooter li:hover a{
     
-    color: yellow;
+    color: #FFD700;
 }
     
     
