--- a/css/pie.css
+++ b/css/pie.css
@@ -248,6 +248,58 @@ div#pie div.parteabajo div.contenedorPie ul#menufooter li:hover a{
     
     color: #FFD700;
 }
+
+
+div.noticiaFooter div p{
+    margin-left: 0px;
+    margin-top: 5px;
+}
+
+
+div.noticiaFooter div.visitas{
+    width: 80px;
+    height: 20px;
+    border: 1px solid blue;
+}
+
+div.noticiaFooter div.visitas h1{
+    width: 20px; height: 20px;
+    border: 1px solid red;
+    float: left;
+    background-image: url("../img/medallapodium.png");
+    
+}
+
+div.noticiaFooter div.visitas p{
+    width: 80px;
+    height: 20px;
+    float: left;
+    font-size: 10px;
+}
+
+div.tituloPodium{
+    width: 150px;
+    height: 30px;
+    border: 1px solid red;
+    margin-left: 60px;
+    position: relative;
+}
+
+div.tituloPodium a{
+    float: left;
+    
+}
+div.tituloPodium h4{
+    text-align: center;
+    position: absolute;
+    left: -23px;
+    top: 3px;
+    font-size: 13px;
+
+
+
+
+}
     
     
     
